<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".RegisterActivity"
        android:background="#161804"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/woodableslogo"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spartan_medium"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="#d6ae80"
            android:textSize="20sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spartan_medium"
            android:textAlignment="center"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:letterSpacing="0.07"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/background_curved_corners"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_registered" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/login_here"
                        android:textColor="#2437e7"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="145dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:textStyle="bold"
                    android:text="@string/are_you_a" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/client" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/woodworker" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/username"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="266dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enter_username"
                    android:textColor="@color/white"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/last_name"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="269dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="20dp"
                    android:textSize="18sp"
                    android:text="@string/enter_last_name"
                    android:textColor="@color/white"
                    android:inputType="text"
                    tools:ignore="LabelFor"
                    android:autofillHints="" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/first_name"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="269dp"
                    android:layout_height="48dp"
                    android:inputType="text"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enter_first_name"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/middle_name"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enter_middle_name_optional"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="560dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:textStyle="bold"
                    android:text="@string/gender" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="580dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/female" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="610dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="60dp"
                    android:text="@string/rather_not_say" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="680dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:text="@string/birthdate"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="266dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:inputType="datetime"
                    android:text="@string/mm_dd_yy"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/age"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="267dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enter_your_age"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/address"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="269dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/enter_address"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/mobile_number"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="267dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="80dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/_63"
                    android:textColor="@color/white"
                    android:autofillHints=""
                    tools:ignore="LabelFor"
                    android:inputType="text" />

                <Button
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:text="@string/register"
                    android:textStyle="bold" >
                </Button>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

