<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:background="@drawable/listing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_corners"
            android:clipToOutline="true"
            android:contentDescription="@string/pfp"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/anita" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/title_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/spartan_medium"
                android:text="@string/anita_project"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/desc_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spartan_medium"
                android:textColor="@color/black"
                android:text="@string/lorem_ipsum"
                android:textSize="10sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:layout_weight="0.10"
            android:contentDescription="@string/woodworker"
            android:src="@drawable/paperplane" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:padding="8dp"
            android:contentDescription="@string/woodworker"
            android:src="@drawable/linkblack" />

        <Button
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="0.75"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/cinnamon"
            android:text="@string/apply"
            android:textSize="7sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0.75"
            android:backgroundTint="@color/indochine"
            android:text="@string/save"
            android:textSize="7sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1.20"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/interested"
            android:textSize="7sp" />
    </LinearLayout>
</LinearLayout>