<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#161804">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/woodables"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/spartan_medium"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#d6ae80"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/spartan_medium"
        android:textAlignment="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/description"
        android:textStyle="bold"
        android:textColor="#ffff"
        android:textSize="14sp"
        android:letterSpacing="0.07"
        />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_curved_corners"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_to_continue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@string/username" />

            <EditText
                android:id="@+id/userIn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:inputType="text"
                android:background="@drawable/textbox_4curvedcorners"
                android:textColor="@color/white"
                android:hint="Enter Username"
                android:autofillHints="" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passIn"
                android:layout_width="200dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:layout_height="48dp"
                android:layout_marginStart="95dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/textbox_4curvedcorners"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/toprofilelogin"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="95dp"
                android:text="@string/login"
                android:background="@drawable/textbox_4curvedcorners"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="-10dp"
                android:text="@string/forgot_password"
                android:textColor="#2437e7"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-10dp"
                android:text="@string/register_here"
                android:textColor="#2437e7"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_gravity="center" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>