<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpActivity"
    android:orientation="vertical"
    android:background="#161804">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            android:src="@drawable/woodables" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spartan_medium"
            android:layout_marginTop="180dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="#d6ae80"
            android:textSize="30sp"
            android:layout_toRightOf="@id/imgview"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/spartan_medium"
            android:layout_marginTop="225dp"
            android:layout_toRightOf="@id/imgview"
            android:text="@string/description"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="14sp"
            android:letterSpacing="0.07"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="400dp"
            android:background="@drawable/background_curved_corners">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="85dp"
                    android:gravity="center"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/regBtn"
                    android:layout_width="250dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/textbox_4curvedcorners"
                    android:text="@string/register" />

            </LinearLayout>

        </RelativeLayout>



    </RelativeLayout>



</LinearLayout>